Forgot to mention to change server.listen(...) to app.listen(...) when switching to Express

--- a/node/node-lab.html
+++ b/node/node-lab.html
@@ -413,7 +413,7 @@ app.listen(8080, function(){
     console.log(&apos;- Server listening on port 8080&apos;.grey);
 });</code></pre>
 
-<p>A little bit longer, but simpler to understand, and more extensible. Note that the order routes are defined is important.</p>
+<p>A little bit longer, but simpler to understand, and more extensible. Note that the order routes are defined is important, and the <code>server.listen(...)</code> line has been replaced with <code>app.listen(...)</code>.</p>
 
 <h3 id="addingfeatures">Adding Features</h3>
 
