first round of edits

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,16 +3,15 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    
-    <!-- This will include a external javascript file-->.
+    <!-- This will include an external javascript file-->.
     <script src="jquery.js"></script>
-    <script>
-	//This is where you can write inline javascript 
-
-    </script>
 </head>
 <body>
     <!--Add HTML content here-->
     
+    <script>
+	//This is where you can write inline javascript 
+
+    </script>
 </body>
 </html>
