--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -509,7 +509,7 @@ An unordered list, written as such:</p>
 
 <h2 id="practicalnotesaboutcss">Practical notes about CSS</h2>
 
-<h3 id="resetstylesheets">reset Stylesheets</h3>
+<h3 id="resetstylesheets">Reset Stylesheets</h3>
 
 <p>Different browsers may have slight inconsistencies in their default element appearances, such as default line heights, margins and font sizes of headings. Reset stylesheets can be an useful tool to help reduce such cross-browser inconsistencies, and make your code more browser-compatible. Just include the reset stylesheet BEFORE you include any others, and it should act as a default on which you make more specific modifications. Here is a popular version of a reset stylesheet created by Eric Meyer that covers the basic inconsistencies and is fast to load: <a href="http://meyerweb.com/eric/tools/css/reset/reset.css">http://meyerweb.com/eric/tools/css/reset/reset.css</a></p>
 
