--- a/node/node-lab.html
+++ b/node/node-lab.html
@@ -157,7 +157,7 @@ pre .tex .formula {
 
 <h2 id="gettingstartedwiththerepl">Getting Started with the REPL</h2>
 
-<p>The node <a href="http://en.wikipedia.org/wiki/Read–eval–print_loop">REPL</a>, or read&#8211;eval&#8211;print loop, is a great way to play around with Node&#8217;s features without having to create any scripts. To start the REPL, just type <code>node</code> at the command line.</p>
+<p>The Node <a href="http://en.wikipedia.org/wiki/Read–eval–print_loop">REPL</a>, or read&#8211;eval&#8211;print loop, is a great way to play around with Node&#8217;s features without having to create any scripts. To start the REPL, just type <code>node</code> at the command line.</p>
 
 <pre><code>&gt;
 </code></pre>
