--- a/html/html_css.html
+++ b/html/html_css.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>CS132: Lab 1</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -27,11 +27,14 @@
     </head>
     <body>
 	
+	
 	<h1>Lab 1: HTML and CSS</h1>
 
 <p>Welcome to the first lab for CS132!</p>
 
-<p>Some logistics:</p>
+<p>This lab should be pretty straightforward. There are 3 checkpoints with Codecademy assignments you may need to get checked off (one is optional for concentrators). But please read it! Much of it will be review, but we've expanded the material covered in lecture a little bit to cover some important details.</p>
+
+<p><strong>Some logistics:</strong></p>
 
 <ul>
 <li>Sam and Matt will be holding hours tonight from 7-9pm in the Moonlab.</li>
@@ -40,11 +43,11 @@
 <li>Project 1 will be out today!</li>
 </ul>
 
-<p>Final project details:</p>
+<p><strong>Final project details:</strong></p>
 
-<p>If you finish the lab early please review the projects <a href="http://cs.brown.edu/courses/cs132/projects.html">posted on the website</a>. #TODO.</p>
+<p>If you finish the lab early please review the projects <a href="http://cs.brown.edu/courses/cs132/projects.html">posted on the website</a>.</p>
 
-<p>This lab should be pretty straightforward. There are 3 checkpoints with Codecademy assignments you may need to get checked off (one is optional for concentrators). But please read it! Much of it will be review, but we've expanded the material covered in lecture a little bit to cover some important details.</p>
+<p>Please fill out the questionnaire on that page and we'll assign groups shortly.</p>
 
 <h1>HTML: Review</h1>
 
