--- a/html/html_css.html
+++ b/html/html_css.html
@@ -235,7 +235,7 @@ An unordered list:</p>
 
 <p>Please call a TA over to check you off, or come to hours to demonstrate your work.</p>
 
-<p><a href="http://www.codecademy.com/courses/web-beginner-en-f8mcL/2?curriculum_id=50579fb998b470000202dc8b#!/exercises/0">div and span</a></p>
+<p><a href="http://www.codecademy.com/courses/web-beginner-en-f8mcL/2?curriculum_id=50579fb998b470000202dc8b#!/exercises/0">Codecademy: Using div and span</a></p>
 
 <h2>Final Comments</h2>
 
@@ -329,11 +329,10 @@ An unordered list:</p>
 
 <p>or for only h1 elements with that class with this:</p>
 
-<p><code>css
-h1.headline {
+<pre><code>h1.headline {
     /* this is a comment in CSS so it is ignored */
 }
-</code></p>
+</code></pre>
 
 <p>or for only h1 and h2 elements (comma specifies multiple selectors):</p>
 
@@ -380,7 +379,7 @@ h1.headline {
 
 <p>Please call a TA over to check you off, or come to hours to demonstrate your work.</p>
 
-<p><a href="http://www.codecademy.com/courses/web-beginner-en-6merh?curriculum_id=50579fb998b470000202dc8b">CSS Positioning</a></p>
+<p><a href="http://www.codecademy.com/courses/web-beginner-en-6merh?curriculum_id=50579fb998b470000202dc8b">Codecademy: CSS Positioning</a></p>
 
 <p>There are dozens of CSS properties, although not all of them are supported by every browser.</p>
 
