--- a/javascript/snippet.html
+++ b/javascript/snippet.html
@@ -5,8 +5,9 @@
 <input type="text" id="name" />
 
 <div id="input" style="display:none;">
-  <label type="text" id="age" />
-  <button id="save">save</button>
+  <label type="text" for="age" />
+  <input type="text" id="age" name="age" />
+   <button id="save">save</button>
 </div>
 
 <div id="result" style="display:none;">
