--- a/javascript/lab2.html
+++ b/javascript/lab2.html
@@ -372,7 +372,7 @@ var fn = "foo";
 obj[fn]();
 </code></pre>
 
-<p>Functions have a special variable called <code>this</code> in their scope. When a function is called plain (e.g. <code>foo()</code>), <code>this</code> is the function itself. If the function is called as the property of another object (e.g. <code>obj.foo()</code>) <code>this</code> refers to the object before the <code>.</code> (<code>obj</code>). But in a special case where the function is called with the <code>new</code> keyword, <code>this</code> is bound to an object, and that object is returned. This is the normal way of declaring and instantiating an object type ("class") in Javascript:</p>
+<p>Functions have a special variable called <code>this</code> in their scope. When a function is called plain (e.g. <code>foo()</code>), <code>this</code> is either the <code>window</code> or the object the function is being called on (which could be an instance of the function object). If the function is called as the property of another object (e.g. <code>obj.foo()</code>) <code>this</code> refers to the object before the <code>.</code> (<code>obj</code>). But in a special case where the function is called with the <code>new</code> keyword, <code>this</code> is bound to an object, and that object is returned. This is the normal way of declaring and instantiating an object type ("class") in Javascript:</p>
 
 <pre><code>function Person(name) {
   //assign the name property of the `this` object
@@ -616,6 +616,8 @@ $display.html(myCyberBuddy.profile());
       });
     }
   });
+
+});
 </code></pre>
 
 <p>Great! When you've gotten this working, ask your TA to check you off.</p>
